<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.parkinson.detection.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.parkinson.detection.ui.record.RecordFragment"
        android:label="@string/record"
        tools:layout="@layout/fragment_record">
        <action
            android:id="@+id/action_recordFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.parkinson.detection.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_navigation_history_to_recordingDetailFragment"
            app:destination="@id/recordingDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.parkinson.detection.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/recordingDetailFragment"
        android:name="com.parkinson.detection.ui.history.RecordingDetailFragment"
        android:label="Recording Details"
        tools:layout="@layout/fragment_recording_detail">
        <argument
            android:name="recordingId"
            app:argType="long" />
    </fragment>
    
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.parkinson.detection.ui.record.ResultFragment"
        android:label="Results"
        tools:layout="@layout/fragment_result">
        <argument
            android:name="sessionId"
            app:argType="long" />
        <argument
            android:name="prediction"
            app:argType="integer" />
        <argument
            android:name="predictionText"
            app:argType="string" />
    </fragment>
</navigation> 